--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -4,12 +4,18 @@
 
 body {
     background-color: var(--background-color);
-}
 
-#game-board {
-    display: grid;
-    gap: 1px;
-    grid-template-columns: repeat(4, 1fr);
+    #main {
+        padding: 2rem;
+        border-radius: 1rem;
+        background-color: #313131;
+
+        #game-board {
+            display: grid;
+            gap: 1px;
+            grid-template-columns: repeat(4, 1fr);
+        }
+    }
 }
 
 .tile {
@@ -18,6 +24,7 @@ body {
     justify-content: center;
     background-color: #efefef;
     aspect-ratio: 1;
+    font-size: 2rem;
 }
 
 .empty {
