--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,32 +1,36 @@
 :root {
-    --background-color: #707070;
+  --background-color: #a0a0a0;
 }
 
 body {
-    background-color: var(--background-color);
+  background-color: var(--background-color);
 
-    #main {
-        padding: 2rem;
-        border-radius: 1rem;
-        background-color: #313131;
+  h5 {
+    color: white;
+  }
 
-        #game-board {
-            display: grid;
-            gap: 1px;
-            grid-template-columns: repeat(4, 1fr);
-        }
+  #main {
+    padding: 2rem;
+    border-radius: 1rem;
+    background-color: #313131;
+
+    #game-board {
+      display: grid;
+      gap: 1px;
+      grid-template-columns: repeat(4, 1fr);
+
+      .tile {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #efefef;
+        aspect-ratio: 1;
+        font-size: 2rem;
+      }
+
+      .empty {
+        background-color: var(--background-color);
+      }
     }
-}
-
-.tile {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #efefef;
-    aspect-ratio: 1;
-    font-size: 2rem;
-}
-
-.empty {
-    background-color: var(--background-color);
+  }
 }
